tests/semantic_errors/andrei8_4.tl
require "ifj21"

function main()
    local id : number = "stringgg11"
end

main()
